--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -39,7 +39,9 @@
         "try_again": "Try again",
         "refresh": "Refresh",
         "home": "Home",
-        "discount": "Discount"
+        "discount": "Discount",
+        "view_all": "View All",
+        "view_all_blog": "View All Blog Posts"
     },
     "auth": {
         "login_title": "Login to TravelHub",
@@ -101,7 +103,8 @@
         "support": "Support",
         "company": "Company",
         "hosting": "Hosting",
-        "quick_links": "Quick Links"
+        "quick_links": "Quick Links",
+        "legal": "Legal"
     },
     "home": {
         "welcome_back": "Welcome back, {{name}}!",
@@ -119,7 +122,9 @@
         "verified_hosts": "Verified Hosts",
         "secure_booking": "Secure Booking",
         "24_7_support": "24/7 Support",
-        "best_prices": "Best Prices"
+        "best_prices": "Best Prices",
+        "latest_stories": "Latest Stories",
+        "travel_tips_insights": "Travel tips, destination guides, and insider insights"
     },
     "properties": {
         "title": "Find Your Perfect Stay",
@@ -354,11 +359,13 @@
         "pending": "Pending",
         "pending_payment": "Pending Payment",
         "confirmed": "Confirmed",
+        "in_progress": "In Progress",
         "total_bookings": "Total Bookings",
         "total_earnings": "Total Earnings",
         "active_listings": "Active Listings",
         "pending_reviews": "Pending Reviews",
         "view_all": "View All",
+        "view_all_blog": "View All Blog Posts",
         "manage": "Manage",
         "analytics": "Analytics",
         "notifications": "Notifications",
@@ -679,7 +686,12 @@
         "read_more": "Read More",
         "no_posts_filter": "No blog posts match your search criteria",
         "no_posts": "No blog posts published yet. Check back soon!",
-        "clear_filters": "Clear Filters"
+        "clear_filters": "Clear Filters",
+        "post_not_found": "Blog Post Not Found",
+        "post_not_found_message": "The blog post you are looking for does not exist or has been removed.",
+        "back_to_blog": "Back to Blog",
+        "back_to_all_posts": "Back to All Posts",
+        "tags": "Tags"
     },
     "forms": {
         "first_name_label": "First Name",
@@ -954,7 +966,8 @@
         "select_dates": "Select Dates",
         "processing": "Processing...",
         "free": "Free",
-        "please_login": "Please log in to book this property"
+        "please_login": "Please log in to book this property",
+        "book_now": "Book Now"
     },
     "reviews": {
         "review_submitted": "Review Submitted",
